Fix various issues
