# docs/swagger.yaml
@@ -84,7 +84,7 @@ definitions:
       updated_by_user:
         $ref: '#/definitions/model.User'
     type: object
-  model.MealComment:
+  model.MenuItemComment:
     properties:
       comment:
         type: string
@@ -152,9 +152,9 @@ definitions:
         type: integer
       is_active:
         type: boolean
-      meal_comments:
+      menu_item_comments:
         items:
-          $ref: '#/definitions/model.MealComment'
+          $ref: '#/definitions/model.MenuItemComment'
         type: array
       meal_requests:
         items:
@@ -327,9 +327,9 @@ definitions:
         type: string
       is_active:
         type: boolean
-      meal_comments:
+      menu_item_comments:
         items:
-          $ref: '#/definitions/model.MealComment'
+          $ref: '#/definitions/model.MenuItemComment'
         type: array
       meal_request_items:
         items:
@@ -362,7 +362,7 @@ definitions:
         type: integer
       is_active:
         type: boolean
-      meal_event_menu_sets:
+      meal_event_sets:
         items:
           $ref: '#/definitions/model.MealEventMenuSet'
         type: array
@@ -480,9 +480,9 @@ definitions:
         type: boolean
       last_login_at:
         type: string
-      meal_comments:
+      menu_item_comments:
         items:
-          $ref: '#/definitions/model.MealComment'
+          $ref: '#/definitions/model.MenuItemComment'
         type: array
       meal_requests:
         items:
@@ -1159,7 +1159,7 @@ paths:
           description: OK
           schema:
             items:
-              $ref: '#/definitions/model.MealComment'
+              $ref: '#/definitions/model.MenuItemComment'
             type: array
         "400":
           description: Bad Request
@@ -1197,14 +1197,14 @@ paths:
         name: comment
         required: true
         schema:
-          $ref: '#/definitions/model.MealComment'
+          $ref: '#/definitions/model.MenuItemComment'
       produces:
       - application/json
       responses:
         "201":
           description: Created
           schema:
-            $ref: '#/definitions/model.MealComment'
+            $ref: '#/definitions/model.MenuItemComment'
         "400":
           description: Bad Request
           schema:
@@ -1295,7 +1295,7 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/model.MealComment'
+            $ref: '#/definitions/model.MenuItemComment'
         "400":
           description: Bad Request
           schema:
@@ -1337,14 +1337,14 @@ paths:
         name: comment
         required: true
         schema:
-          $ref: '#/definitions/model.MealComment'
+          $ref: '#/definitions/model.MenuItemComment'
       produces:
       - application/json
       responses:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/model.MealComment'
+            $ref: '#/definitions/model.MenuItemComment'
         "400":
           description: Bad Request
           schema:
@@ -1393,7 +1393,7 @@ paths:
           description: OK
           schema:
             items:
-              $ref: '#/definitions/model.MealComment'
+              $ref: '#/definitions/model.MenuItemComment'
             type: array
         "400":
           description: Bad Request
@@ -2079,7 +2079,7 @@ paths:
           description: OK
           schema:
             items:
-              $ref: '#/definitions/model.MealComment'
+              $ref: '#/definitions/model.MenuItemComment'
             type: array
         "400":
           description: Bad Request
